- 
    Bug 
- 
    Resolution: Fixed
- 
     Not Evaluated Not Evaluated
- 
    6.6.0 Beta3
- 
    None
- 
        3fbcf5382 (dev), 046ea6b70 (6.6)
QElapsedTimer::Duration, QElapsedTimer::TimePoint are declared in code to be the same as std::chrono::nanoseconds, std::chrono::time_point<std::chrono::steady_clock, Duration>:
    using Duration = std::chrono::nanoseconds;
    using TimePoint = std::chrono::time_point<std::chrono::steady_clock, Duration>;
Anyhow, in the documentation that is documented only very indirectly: https://doc-snapshots.qt.io/qt6-6.6/qelapsedtimer.html . We should make this more explicit.
- resulted from
- 
                     QTBUG-116783
        Qt 6.6 Core - Documentation Changes Review QTBUG-116783
        Qt 6.6 Core - Documentation Changes Review-         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-116876 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 502794,2 | QElapsedTimer: document Duration and TimePoint typedefs | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 502948,2 | QElapsedTimer: document Duration and TimePoint typedefs | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |