QElapsedTimer: document Duration and TimePoint typedefs

Fixes: QTBUG-116876
Change-Id: I71215d9f9e3caf0c50635a86c65c94a6f097cbe0
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 3fbcf53828c039d1210e203c8c631d10e26deee1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>